==> tandarit/TankTaviranyito/NRF24L01/nrf24l01.c <==
#include "nrf24l01.h"

uint8_t NRF24L01_Init(uint8_t channel, uint8_t payload_size) {	
	/* Max payload is 32bytes */
	if (payload_size > 32) {
		payload_size = 32;
	}
	
	/* Fill structure */
	NRF24L01_Struct.Channel = !channel; /* Set channel to some different value for TM_NRF24L01_SetChannel() function */
	NRF24L01_Struct.PayloadSize = payload_size;
	NRF24L01_Struct.OutPwr = NRF24L01_OutputPower_0dBm;
	NRF24L01_Struct.DataRate = NRF24L01_DataRate_1M;
	
	/* Reset nRF24L01+ to power on registers values */
	NRF24L01_SoftwareReset();
	
	/* Channel select */
	NRF24L01_SetChannel(channel);
	
	/* Set pipeline to max possible 32 bytes */
	NRF24L01_WriteRegister(NRF24L01_REG_RX_PW_P0, NRF24L01_Struct.PayloadSize); // Auto-ACK pipe
	NRF24L01_WriteRegister(NRF24L01_REG_RX_PW_P1, NRF24L01_Struct.PayloadSize); // Data payload pipe
	NRF24L01_WriteRegister(NRF24L01_REG_RX_PW_P2, NRF24L01_Struct.PayloadSize);
	NRF24L01_WriteRegister(NRF24L01_REG_RX_PW_P3, NRF24L01_Struct.PayloadSize);
	NRF24L01_WriteRegister(NRF24L01_REG_RX_PW_P4, NRF24L01_Struct.PayloadSize);
	NRF24L01_WriteRegister(NRF24L01_REG_RX_PW_P5, NRF24L01_Struct.PayloadSize);
	
	/* Set RF settings (1mbps, output power) */
	NRF24L01_SetRF(NRF24L01_Struct.DataRate, NRF24L01_Struct.OutPwr);
	
	/* Config register */
	NRF24L01_WriteRegister(NRF24L01_REG_CONFIG, NRF24L01_CONFIG);
	
	/* Enable auto-acknowledgment for all pipes */
	NRF24L01_WriteRegister(NRF24L01_REG_EN_AA, 0x3F);
	
	/* Enable RX addresses */
	NRF24L01_WriteRegister(NRF24L01_REG_EN_RXADDR, 0x3F);

	/* Auto retransmit delay: 1000 (4x250) us and Up to 15 retransmit trials */
	NRF24L01_WriteRegister(NRF24L01_REG_SETUP_RETR, 0x4F);
	
	/* Dynamic length configurations: No dynamic length */
	NRF24L01_WriteRegister(NRF24L01_REG_DYNPD, (0 << NRF24L01_DPL_P0) | (0 << NRF24L01_DPL_P1) | (0 << NRF24L01_DPL_P2) | (0 << NRF24L01_DPL_P3) | (0 << NRF24L01_DPL_P4) | (0 << NRF24L01_DPL_P5));
	
	/* Clear FIFOs */
	NRF24L01_FLUSH_TX();
	NRF24L01_FLUSH_RX();
	
	/* Clear interrupts */
	NRF24L01_CLEAR_INTERRUPTS;
	
	/* Go to RX mode */
	NRF24L01_PowerUpRx();
	
	/* Return OK */
	return 1;
}

void NRF24L01_FLUSH_TX(void) {
	//uint8_t valueMISOFLUSH;
	NRF24L01_CSN_LOW; 
	NRF24L01_SPI->DR=NRF24L01_FLUSH_TX_MASK;
	while (!(NRF24L01_SPI->SR & SPI_I2S_FLAG_TXE));
  while (!(NRF24L01_SPI->SR & SPI_I2S_FLAG_RXNE));
  while (NRF24L01_SPI->SR & SPI_I2S_FLAG_BSY);
	(void)NRF24L01_SPI->DR;
	NRF24L01_CSN_HIGH;
}

void NRF24L01_Transmit(uint8_t *data) {
	uint8_t i;
	NRF24L01_CE_LOW;
	NRF24L01_PowerUpTx();
	NRF24L01_FLUSH_TX();
	NRF24L01_CSN_LOW;
	NRF24L01_SPI->DR=NRF24L01_W_TX_PAYLOAD_MASK;
	while (!(NRF24L01_SPI->SR & SPI_I2S_FLAG_TXE));
	while (!(NRF24L01_SPI->SR & SPI_I2S_FLAG_RXNE));
	while (NRF24L01_SPI->SR & SPI_I2S_FLAG_BSY);
	(void)NRF24L01_SPI->DR;
	for (i = 0; i < NRF24L01_Struct.PayloadSize; i++) {
		NRF24L01_SPI->DR = data[i];
		while (!(NRF24L01_SPI->SR & SPI_I2S_FLAG_TXE));
		while (!(NRF24L01_SPI->SR & SPI_I2S_FLAG_RXNE));
		while (NRF24L01_SPI->SR & SPI_I2S_FLAG_BSY);
		(void)NRF24L01_SPI->DR;
	}
	NRF24L01_CSN_HIGH;	
	NRF24L01_CE_HIGH;	
	Delay(15);
	NRF24L01_CE_LOW;
}

void NRF24L01_GetData(uint8_t* data) {
	uint8_t i;
	
	NRF24L01_CSN_LOW;
	NRF24L01_SPI->DR=NRF24L01_R_RX_PAYLOAD_MASK;
	while (!(NRF24L01_SPI->SR & SPI_I2S_FLAG_TXE));
  while (!(NRF24L01_SPI->SR & SPI_I2S_FLAG_RXNE));
  while (NRF24L01_SPI->SR & SPI_I2S_FLAG_BSY);
	(void)NRF24L01_SPI->DR;
	for (i = 0; i < NRF24L01_Struct.PayloadSize; i++) {
		NRF24L01_SPI->DR = 0xFF;
		while (!(NRF24L01_SPI->SR & SPI_I2S_FLAG_TXE));
		while (!(NRF24L01_SPI->SR & SPI_I2S_FLAG_RXNE));
		while (NRF24L01_SPI->SR & SPI_I2S_FLAG_BSY);
    data[i] = NRF24L01_SPI->DR;
	}
	NRF24L01_CSN_HIGH;
		
	NRF24L01_WriteRegister(NRF24L01_REG_STATUS, (1 << NRF24L01_RX_DR));
}

void SPI_WriteMulti(SPI_TypeDef* SPIx, uint8_t* dataOut, uint32_t count) {
	uint32_t i;	
	//uint8_t valueMISO;
	NRF24L01_CSN_LOW;
	for (i = 0; i < count; i++) {
		NRF24L01_SPI->DR=dataOut[i];
		while (!(NRF24L01_SPI->SR & SPI_I2S_FLAG_TXE));
  while (!(NRF24L01_SPI->SR & SPI_I2S_FLAG_RXNE));
  while (NRF24L01_SPI->SR & SPI_I2S_FLAG_BSY);
		(void)NRF24L01_SPI->DR;	
	}
	NRF24L01_CSN_HIGH;
}

void SPI_ReadMulti(SPI_TypeDef* SPIx, uint8_t* dataIn, uint8_t dummy, uint32_t count) {
	uint32_t i;
	
	NRF24L01_CSN_LOW;
	for (i = 0; i < count; i++) {
		NRF24L01_SPI->DR=dummy;
		while (!(NRF24L01_SPI->SR & SPI_I2S_FLAG_TXE));
		while (!(NRF24L01_SPI->SR & SPI_I2S_FLAG_RXNE));
		while (NRF24L01_SPI->SR & SPI_I2S_FLAG_BSY);
		dataIn[i] = NRF24L01_SPI->DR;		
	}
	NRF24L01_CSN_HIGH;	
}

void SPI_SendMulti(SPI_TypeDef* SPIx, uint8_t* dataOut, uint8_t* dataIn, uint32_t count) {
	uint32_t i;
	
	for (i = 0; i < count; i++) {
		NRF24L01_SPI->DR = dataOut[i];
		while (!(NRF24L01_SPI->SR & SPI_I2S_FLAG_TXE));
		while (!(NRF24L01_SPI->SR & SPI_I2S_FLAG_RXNE));
		while (NRF24L01_SPI->SR & SPI_I2S_FLAG_BSY);
    dataIn[i] = NRF24L01_SPI->DR;
	}
}
