==> heile/HackfestElectro/Nucleo64_Test1/Src/nRF24L01.c <==
#include "nRF24L01.h"
#define NRF24L01_REG_CONFIG   0x00 //Configuration Register
#define NRF24L01_REG_EN_AA   0x01 //Enable ‘Auto Acknowledgment’ Function
#define NRF24L01_REG_EN_RXADDR  0x02 //Enabled RX Addresses
#define NRF24L01_REG_SETUP_AW  0x03 //Setup of Address Widths (common for all data pipes)
#define NRF24L01_REG_SETUP_RETR  0x04 //Setup of Automatic Retransmission
#define NRF24L01_REG_RF_CH   0x05 //RF Channel
#define NRF24L01_REG_RF_SETUP  0x06 //RF Setup Register
#define NRF24L01_REG_STATUS   0x07 //Status Register
#define NRF24L01_REG_OBSERVE_TX  0x08 //Transmit observe register
#define NRF24L01_REG_RPD   0x09
#define NRF24L01_REG_RX_ADDR_P0  0x0A //Receive address data pipe 0. 5 Bytes maximum length.
#define NRF24L01_REG_RX_ADDR_P1  0x0B //Receive address data pipe 1. 5 Bytes maximum length.
#define NRF24L01_REG_RX_ADDR_P2  0x0C //Receive address data pipe 2. Only LSB
#define NRF24L01_REG_RX_ADDR_P3  0x0D //Receive address data pipe 3. Only LSB
#define NRF24L01_REG_RX_ADDR_P4  0x0E //Receive address data pipe 4. Only LSB
#define NRF24L01_REG_RX_ADDR_P5  0x0F //Receive address data pipe 5. Only LSB
#define NRF24L01_REG_TX_ADDR  0x10 //Transmit address. Used for a PTX device only
#define NRF24L01_REG_RX_PW_P0  0x11
#define NRF24L01_REG_RX_PW_P1  0x12
#define NRF24L01_REG_RX_PW_P2  0x13
#define NRF24L01_REG_RX_PW_P3  0x14
#define NRF24L01_REG_RX_PW_P4  0x15
#define NRF24L01_REG_RX_PW_P5  0x16
#define NRF24L01_REG_FIFO_STATUS 0x17 //FIFO Status Register

void SPI_SendMulti(SPI_HandleTypeDef* SPIx, uint8_t* dataOut, uint8_t* dataIn,
		uint32_t count) {
	switch (HAL_SPI_TransmitReceive(SPIx, dataOut, dataIn, count, 100)) {
//	while (SPIx->State != HAL_SPI_STATE_READY) {
//		;
//	}
//	switch (HAL_SPI_Transmit_IT(SPIx, dataOut, count)) {
	case HAL_OK:
		break;
	case HAL_TIMEOUT:
		Error_Handler();
		//HAL_GPIO_WritePin(GPIOE, LD10_Pin, GPIO_PIN_RESET);
		break;
	case HAL_ERROR:
		Error_Handler();
		//HAL_GPIO_WritePin(GPIOE, LD9_Pin, GPIO_PIN_RESET);
		break;
	default:
		break;
	}
}

void SPI_WriteMulti(SPI_HandleTypeDef* SPIx, uint8_t* dataOut, uint32_t count) {
//	switch (HAL_SPI_Transmit(SPIx, dataOut, count, 1000)) {
//	switch (HAL_SPI_TransmitReceive(SPIx, dataOut, dataOut, count, 100)) {
	while (SPIx->State != HAL_SPI_STATE_READY)
		;
	switch (HAL_SPI_Transmit_IT(SPIx, dataOut, count)) {
	case HAL_OK:
		break;
	case HAL_TIMEOUT:
		Error_Handler();
		//HAL_GPIO_WritePin(GPIOE, LD10_Pin, GPIO_PIN_RESET);
		break;
	case HAL_ERROR:
		Error_Handler();
		//HAL_GPIO_WritePin(GPIOE, LD9_Pin, GPIO_PIN_RESET);
		break;
	default:
		break;
	}
}

void SPI_ReadMulti(SPI_HandleTypeDef* SPIx, uint8_t *dataIn, uint8_t dummy,
		uint32_t count) {
	HAL_SPIEx_FlushRxFifo(SPIx);
//	switch (HAL_SPI_Receive(SPIx, dataIn, count, 1000)) {
	memset(dataIn, dummy, count);
	switch (HAL_SPI_TransmitReceive(SPIx, dataIn, dataIn, count, 1000)) {
	case HAL_OK:
		break;
	case HAL_TIMEOUT:
		Error_Handler();
		//HAL_GPIO_WritePin(GPIOE, LD10_Pin, GPIO_PIN_RESET);
		break;
	case HAL_ERROR:
		Error_Handler();
		//HAL_GPIO_WritePin(GPIOE, LD9_Pin, GPIO_PIN_RESET);
		break;
	default:
		break;
	}
}

uint8_t NRF24L01_Init(SPI_HandleTypeDef *hspi, uint8_t channel,
		uint8_t payload_size) {
	NRF24L01_SPI = hspi;

	/* Initialize CE and CSN pins */
	NRF24L01_InitPins();

	/* Initialize SPI */
//SPI_Init(NRF24L01_SPI, NRF24L01_SPI_PINS);
	/* Max payload is 32bytes */
	if (payload_size > 32) {
		payload_size = 32;
	}

	/* Fill structure */
	NRF24L01_Struct.Channel = !channel; /* Set channel to some different value for NRF24L01_SetChannel() function */
	NRF24L01_Struct.PayloadSize = payload_size;
	NRF24L01_Struct.OutPwr = NRF24L01_OutputPower_0dBm;
	NRF24L01_Struct.DataRate = NRF24L01_DataRate_2M;

	/* Reset nRF24L01+ to power on registers values */
	NRF24L01_SoftwareReset();

	/* Channel select */
	NRF24L01_SetChannel(channel);

	/* Set pipeline to max possible 32 bytes */
	NRF24L01_WriteRegister(NRF24L01_REG_RX_PW_P0, NRF24L01_Struct.PayloadSize); // Auto-ACK pipe
	NRF24L01_WriteRegister(NRF24L01_REG_RX_PW_P1, NRF24L01_Struct.PayloadSize); // Data payload pipe
	NRF24L01_WriteRegister(NRF24L01_REG_RX_PW_P2, NRF24L01_Struct.PayloadSize);
	NRF24L01_WriteRegister(NRF24L01_REG_RX_PW_P3, NRF24L01_Struct.PayloadSize);
	NRF24L01_WriteRegister(NRF24L01_REG_RX_PW_P4, NRF24L01_Struct.PayloadSize);
	NRF24L01_WriteRegister(NRF24L01_REG_RX_PW_P5, NRF24L01_Struct.PayloadSize);

	/* Set RF settings (2mbps, output power) */
	NRF24L01_SetRF(NRF24L01_Struct.DataRate, NRF24L01_Struct.OutPwr);

	/* Config register */
	NRF24L01_WriteRegister(NRF24L01_REG_CONFIG, NRF24L01_CONFIG);

	/* Enable auto-acknowledgment for all pipes */
	NRF24L01_WriteRegister(NRF24L01_REG_EN_AA, 0x3F);

	/* Enable RX addresses */
	NRF24L01_WriteRegister(NRF24L01_REG_EN_RXADDR, 0x3F);

	/* Auto retransmit delay: 1000 (4x250) us and Up to 15 retransmit trials */
	NRF24L01_WriteRegister(NRF24L01_REG_SETUP_RETR, 0x4F);

	/* Dynamic length configurations: No dynamic length */
	NRF24L01_WriteRegister(NRF24L01_REG_DYNPD,
			(0 << NRF24L01_DPL_P0) | (0 << NRF24L01_DPL_P1)
					| (0 << NRF24L01_DPL_P2) | (0 << NRF24L01_DPL_P3)
					| (0 << NRF24L01_DPL_P4) | (0 << NRF24L01_DPL_P5));

	NRF24L01_FLUSH_TX
	;

	/* Clear interrupts */
	NRF24L01_Clear_Interrupts(0x070);

	/* Go to RX mode */
	NRF24L01_PowerUpRx();

	/* Clear FIFOs */
	NRF24L01_FLUSH_RX
	;

	/* Return OK */
	return 1;
}

void NRF24L01_Flush_Tx() {
	NRF24L01_CSN_LOW;
	SPI_Send(NRF24L01_SPI, NRF24L01_FLUSH_TX_MASK);
	NRF24L01_CSN_HIGH;
}

void NRF24L01_Transmit(uint8_t *data) {
	uint8_t count = NRF24L01_Struct.PayloadSize;

	/* Chip enable put to low, disable it */
	NRF24L01_CE_LOW;

	/* Go to power up tx mode */
	NRF24L01_PowerUpTx();

	/* Clear TX FIFO from NRF24L01+ */
	NRF24L01_FLUSH_TX
	;

	/* Send payload to nRF24L01+ */
	NRF24L01_CSN_LOW;
	/* Send write payload command */
	SPI_Send(NRF24L01_SPI, NRF24L01_W_TX_PAYLOAD_MASK);
	/* Fill payload with data*/
	SPI_WriteMulti(NRF24L01_SPI, data, count);

	while (NRF24L01_SPI->State != HAL_SPI_STATE_READY)
		;

	/* Disable SPI */
	NRF24L01_CSN_HIGH;

	/* Send data! */
	NRF24L01_CE_HIGH;
}

void NRF24L01_GetData(uint8_t* data) {
	/* Pull down chip select */
	NRF24L01_CSN_LOW;
	/* Send read payload command*/
	SPI_Send(NRF24L01_SPI, NRF24L01_R_RX_PAYLOAD_MASK);
	/* Read payload */
	SPI_ReadMulti(NRF24L01_SPI, data, NRF24L01_NOP_MASK,
			NRF24L01_Struct.PayloadSize);

	while (NRF24L01_SPI->State != HAL_SPI_STATE_READY)
		;

	/* Pull up chip select */
	NRF24L01_CSN_HIGH;

	/* Reset status register, clear RX_DR interrupt flag */
	NRF24L01_WriteRegister(NRF24L01_REG_STATUS, (1 << NRF24L01_RX_DR));
}
